# eagv3

./: .gitignore  README.md  game.js  gemini.js  manifest.json  newtab.html  ui.js
a1/job-automation-bot/: implementation_plan.md  task.md
a1/resume-parser/: package.json
a1/workday-autofill-extension/: generate_secrets.sh  popup.css  popup.js  resume.json
a2/: README.md  newtab.css  popup.html
a2/a2_tmp/: newtab.html  ui.js
a3/: .gitignore  README.md  agent.py  basic_llm.py  pyproject.toml
a4/: agent.py  agent_cli.py  mcp_server.py  pyproject.toml
a5/: .gitignore  agent_cli.py  mcp_server.py  models.py  pyproject.toml
resume-parser/: package-lock.json  parse.js
workday-autofill-extension/: .gitignore  README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js  resume.json  secrets.example.js
