[project]
name = "a5"
version = "0.1.0"
description = "API Endpoint Discovery Agent — MCP Server + CLI Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
    "google-genai>=1.74.0",
    "prefab-ui>=0.19.1",
    "requests>=2.33.1",
    "pydantic>=2.11.4",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.0",
]
